--- a/App/views/auth_login.ejs
+++ b/App/views/auth_login.ejs
@@ -15,16 +15,16 @@
   </head>
   <body>
     <h1>CS2102: <%= title%></h1>
-      <input type=button class="btn btn-primary" onClick="location.href='../auth'" value='Log in'>
-      <script>
-        (function() {
-          window.addEventListener('load', function() {
-            var forms = [document.getElementById('html_form')];
-            var validation = Array.prototype.filter.call(forms, function(form) {
-              form.addEventListener('submit', check, false);
-            });
-          }, false);
-        })();
-      </script>
+      <form id="html_form" action="./auth/login" role="form" method="post">
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="text" class="form-control" id="password" name="password" placeholder="Enter your password">
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
     </body>
 </html>
