Sign up form link working.

--- a/App/views/signup.ejs
+++ b/App/views/signup.ejs
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h1>CS2102: <%= title%></h1>
-      <form id="html_form" action="./auth/login" role="form" method="post">
+      <form id="html_form" action="signup" role="form" method="post">
         <div class="form-group">
           <label for="username">Username</label>
           <input type="text" class="form-control" id="username" name="username" placeholder="Required">
